# lcd-opencv

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  deploy.sh
inc/: image.h  lcd.h  lcd_init.h  lcdfont.h  pic.h  socket.hpp  thread_create_frame.hpp  thread_display.hpp
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo2  dev.cpp  lcd.cpp  lcd_init.cpp  main.cpp  socket.cpp  thread_create_frame.cpp  thread_display.cpp
